Ene 2023 actual_ 02 Construyendo mi Portafolio

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <ul>
             <li> <a href="#Encabezado">Inicio</a>  </li>
             <li> <a href="#Intereses">Intereses</a>  </li>
+            <li> <a href="#Info Educación">Info Educación</a>  </li>
             <li> <a href="#Proyectos">Proyectos</a>  </li>
             <li> <a href="#Certificaciones">Certificaciones</a>  </li>
-            <li> <a href="#Info Educación">Info Educación</a>  </li>
             <li> <a href="#Galeria">Galeria</a>  </li>
             <li> <a href="#Contacto"> Contacto</a>  </li>
         </ul>    
@@ -36,15 +36,21 @@
         <header id="Encabezado">
             <h1>"Si lloras por haber perdido el sol, las lágrimas no te dejarán ver las estrellas"</h1>
             <p>Rabindranath Tagore - Poeta</p>
-            <img src="img/Paisaje-lago.jpeg" alt="Paisaje de un lago" width="1000" title="Paisaje">
+            <img src="img/Paisaje-lago.jpeg" alt="Paisaje de un lago" width="1250" title="Paisaje">
         </header>
 
         <div id="Intereses">
             <h3>Intereses</h3>
-            <p>No hay tiempo!!! Y sin embargo aun puedes </p>
+            <p>No hay tiempo!!! Apenas hace un par de años pense en tener una vida promedio, pero la incertidumbre del no saber que pasaria en caso de algun siniestro fue lo que me llevo a dar un giro a mi vida, tengo mi Familia, lo cual es pilar mas grande que tengo el cuaq aunque caiga, se que me dara el empuje para seguir.
+            Soy Fernando Morales y tengo la confianza en que puedo continuar mejorando cada dia mi vida.
+            Mis intereses son y siempre seran: Mi familia, mi mundo, y ser lo mas fiel a mis creencias.
+            </p>
+            <span>
+                <img src="" alt="Yo.">
+            </span>
         </div>
 
-        <section id="Proyectos">
+        <section id="Info Educación">
             <article>
                 <p></p>
             </article>
@@ -57,7 +63,7 @@
         </section>
 
         <div id="Certificaciones"></div>
-        <div id="Info Educación"></div>
+        <div id="Proyectos"></div>
         <div id="Galeria"></div>
         
 </body>
