--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </section>
 
         <header id="Encabezado">
-            <h1>"Si lloras por haber perdido el sol, las lágrimas no te dejarán ver las estrellas"</h1>
+            <h1 FraseC="Frase Central">"Si lloras por haber perdido el sol, las lágrimas no te dejarán ver las estrellas"</h1>
             <p>Rabindranath Tagore - Poeta</p>
             <img src="img/Paisaje-lago.jpeg" alt="Paisaje de un lago" width="1250" title="Paisaje">
         </header>
@@ -70,6 +70,18 @@
 
 <footer id="Contacto"   >
 <h2>hola</h2>
+<table border="1" width="50% ">
+    <tr>
+        <th>DNI</th>
+        <th>Nombre</th>
+        <th>Email</th>
+    </tr>
+    <tr>
+        <td>123456</td>
+        <td>Fernando Morales</td>
+        <td>nuevocorreo17@gmail.com></td>
+    </tr>
+</table>
 </footer>
 
 </html>
